crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__word_with_form_type.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
assertion_line: 46
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 114,
        },
        word_id: None,
        raw_text: "hello@b",
        cleaned_text: "hello",
        content: [
            Text {
                text: "hello",
            },
        ],
        category: None,
        form_type: Some(
            B,
        ),
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
