crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__word_with_multiple_shortenings.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
assertion_line: 160
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 116,
        },
        word_id: None,
        raw_text: "h(e)l(lo)",
        cleaned_text: "hello",
        content: [
            Text {
                text: "h",
            },
            Shortening {
                text: "e",
            },
            Text {
                text: "l",
            },
            Shortening {
                text: "lo",
            },
        ],
        category: None,
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
