crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__word_with_nonword_category.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
assertion_line: 104
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 113,
        },
        word_id: None,
        raw_text: "&~gaga",
        cleaned_text: "gaga",
        content: [
            Text {
                text: "gaga",
            },
        ],
        category: Some(
            Nonword,
        ),
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
