crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__word_with_omission_category.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
assertion_line: 118
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 110,
        },
        word_id: None,
        raw_text: "0is",
        cleaned_text: "is",
        content: [
            Text {
                text: "is",
            },
        ],
        category: Some(
            Omission,
        ),
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
