crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__word_with_phonological_fragment_category.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
assertion_line: 132
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 111,
        },
        word_id: None,
        raw_text: "&+fr",
        cleaned_text: "fr",
        content: [
            Text {
                text: "fr",
            },
        ],
        category: Some(
            PhonologicalFragment,
        ),
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
