crates/core/talkbank-parser/tests/snapshots/word_parsing_tests__word_with_shortening.snap
---
source: talkbank-tree-sitter-parser/tests/word_parsing_tests.rs
assertion_line: 146
expression: result
---
Ok(
    Word {
        span: Span {
            start: 107,
            end: 114,
        },
        word_id: None,
        raw_text: "hel(lo)",
        cleaned_text: "hello",
        content: [
            Text {
                text: "hel",
            },
            Shortening {
                text: "lo",
            },
        ],
        category: None,
        form_type: None,
        untranscribed: None,
        lang: None,
        part_of_speech: None,
    },
)
